--- a/Buttons.html
+++ b/Buttons.html
@@ -15,11 +15,11 @@
     <body>
         <h1>The lucky button</h1>
         <h2>One of the buttons below is the lucky one, can you guess which one?</h2>
-        <button type ="button" id="1" onclick="onClick(id)">1</button>
-        <button type ="button" id="2" onclick="onClick(id)">2</button>
-        <button type ="button" id="3" onclick="onClick(id)">3</button>
+        <button type ="button" id="1" onclick="onClick(id)" style="height: 50px; width: 50px">1</button>
+        <button type ="button" id="2" onclick="onClick(id)" style="height: 50px; width: 50px">2</button>
+        <button type ="button" id="3" onclick="onClick(id)" style="height: 50px; width: 50px">3</button>
         <p id = "luckResult"></p>
-        <button onClick = "window.location.reload();">Restart</button>
+        <button onClick = "window.location.reload();" style="height: 50px; width: 60px">Restart</button>
         <script src="main.js"></script>
     </body>
 </html>
