--- a/Guess_the_button.html
+++ b/Guess_the_button.html
@@ -20,6 +20,6 @@
         <button type ="button" id="3" onclick="onClick(id)" style="height: 50px; width: 50px">3</button>
         <p id = "luckResult"></p>
         <button onClick = "window.location.reload();" style="height: 50px; width: 60px">Restart</button>
-        <script src="Buttons.js"></script>
+        <script src="Guess_the_button.js"></script>
     </body>
 </html>
